--- a/templates/base.html
+++ b/templates/base.html
@@ -224,7 +224,8 @@
 				<li>
                     <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Student</a>
                     <ul class="collapse list-unstyled" id="homeSubmenu">
-                        <li>                            
+                        
+						<li>                            
 							<a href="{% url 'student:table-view'%}">Query Listing</a>
                         </li>
 						<li>                            
@@ -314,7 +315,6 @@
 
                     <button type="button" id="sidebarCollapse" class="btn btn-info" style="margin-left:2px;" >
                         <i class='fas fa-align-left fa-border fa-1x' style='width:25px;'></i>
-                        
                     </button>
 					
 
@@ -325,10 +325,16 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         						
 						<ul class="nav navbar-nav ml-auto">
+						
+							<li class="nav-item active">                            
+								<a href="{% url 'account:inbox'%}" class="nav-link" style="color:white;">Message Inbox</a>
+							</li>
 							
                             <li class="nav-item active">                                
 								<a href="{% url 'logout' %}" class="nav-link" style="color:white;">Logout</a>
                             </li>
+							
+							
 							<!--
                             <li class="nav-item">
                                 <a class="nav-link" style="color:white;" href="#">Page</a>
